--- a/css/profile/dracula.css
+++ b/css/profile/dracula.css
@@ -1,9 +1,12 @@
 /*
+The original theme is under the MIT license. 
+MIT LICENSE (c) Dracula Theme, adapted by Bye for omg.lol
+
 Theme: Dracula
 Author: Bye (@_byemc)
-License: Public domain
+License: MIT (https://bye.url.lol/draculalicense)
 Version: 1.0
-Description: Dark theme 
+Description: Dark theme with a touch of purple. Adapted from the Dracula color scheme by @zenorocha
 */
 
 @import url('https://cdn-a.omg.lol/css/type.css');
