--- a/css/profile/dracula.css
+++ b/css/profile/dracula.css
@@ -1,10 +1,9 @@
 /*
 The original theme is under the MIT license. 
-MIT LICENSE (c) Dracula Theme, adapted by Bye for omg.lol
 
 Theme: Dracula
 Author: Bye (@_byemc)
-License: MIT (https://bye.url.lol/draculalicense)
+License: MIT
 Version: 1.0
 Description: Dark theme with a touch of purple. Adapted from the Dracula color scheme by @zenorocha
 */
